@@ -21,7 +21,7 @@
  * @author Niels Pardon <mail@niels-pardon.de>
  * @author Oliver Klee <typo3-coding@oliverklee.de>
  */
-class tx_seminars_Model_EventType extends Tx_Oelib_Model implements Tx_Seminars_Interface_Titled {
+class Tx_Seminars_Model_EventType extends Tx_Oelib_Model implements Tx_Seminars_Interface_Titled {
 	/**
 	 * Returns our title.
 	 *
