@@ -50,9 +50,7 @@ class Tx_Seminars_Mapper_EventTypeTest extends Tx_Phpunit_TestCase {
 	 * @test
 	 */
 	public function findWithUidReturnsEventTypeInstance() {
-		self::assertTrue(
-			$this->fixture->find(1) instanceof tx_seminars_Model_EventType
-		);
+		self::assertInstanceOf(Tx_Seminars_Model_EventType::class, $this->fixture->find(1));
 	}
 
 	/**
@@ -63,7 +61,7 @@ class Tx_Seminars_Mapper_EventTypeTest extends Tx_Phpunit_TestCase {
 			'tx_seminars_event_types', array('title' => 'Workshop')
 		);
 
-		/** @var tx_seminars_Model_EventType $model */
+		/** @var Tx_Seminars_Model_EventType $model */
 		$model = $this->fixture->find($uid);
 		self::assertEquals(
 			'Workshop',
