@@ -15,6 +15,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5589] Rename tx_seminars_Model_EventType to Tx_Seminars_Model_EventType
 - [#5588] Rename tx_seminars_Model_Checkbox to Tx_Seminars_Model_Checkbox
 - [#5587] Rename tx_seminars_Model_Category to Tx_Seminars_Model_Category
 - [#5586] Rename tx_seminars_Model_BackEndUser to Tx_Seminars_Model_BackEndUser
